# detect128

./: .gitignore  .pre-commit-config.yaml  README.md  convert.log.txt  convert.sh  data.yaml  main.py  pyproject.toml  run_triton.sh  test.py  train.py  triton_client.py  triton_repo.py  vbxsdk_download.sh
.dvc/: config
.github/workflows/: pre-commit.yml
conf/: config.yaml  data.yaml  test_cfg.yaml  train_cfg.yaml
data/: convert.py  dataset.dvc  model.dvc
datasets/: .gitignore  barcodes.dvc
