[project]
name = "detect128"
version = "0.1.0"
description = "Project for 'Code 128' barcodes detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tensorboard>=2.20.0",
    "ultralytics>=8.3.248",
]

[dependency-groups]
dev = [
    "dvc[s3]>=3.65.0",
    "pre-commit>=4.5.1",
]


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
